--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
 
-    
+    <div class="carousel">
+        <div class="container-images" id="images">
+            <img src="https://images.unsplash.com/photo-1702893575169-c69ea01058b5?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="first image">
+            <img src="https://images.unsplash.com/photo-1702726694297-791e380c538a?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="second image">
+            <img src="https://images.unsplash.com/photo-1701986789761-98b219062a6b?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="third image">
+            <img src="https://images.unsplash.com/photo-1702661689938-32e8b6bcd470?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="fourth image">
+        </div>
+        <div class="container-buttons">
+            <button id="left" class="btn">Prev</button>
+            <button id="Right" class="btn">Next</button>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
