--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="container-buttons">
             <button id="left" class="btn">Prev</button>
-            <button id="Right" class="btn">Next</button>
+            <button id="right" class="btn">Next</button>
         </div>
     </div>
 
